Corrected: - border of tiles - "Darth" shadow - I'm thinking about opacity 0.3 or 0.2. I like 0.2 because I feel darker and with 0.3 opacity there are too much colors

--- a/eksl/css/index.css
+++ b/eksl/css/index.css
@@ -68,7 +68,7 @@ body {
 	position: absolute;
 	margin: 0 auto;
 	width: 100%;
-	top: 14px;
+	top: 17px;
 	font-weight: bold;
 	color: #95191B;
 	font-size: 7rem;
@@ -77,10 +77,9 @@ body {
 	text-shadow: 0px 0px 15px #4F0B02;
 }
 .pageHeader .subtitle {
-	padding-top: 3px;
 	font-weight: bold;
 	color: transparent;
-	font-size: 9rem;
+	font-size: 10rem;
 	text-align: center;
 	text-shadow: 0px 0px 10px #000000;
 }
@@ -108,7 +107,10 @@ body {
 	margin: 3px;
 	display: inline-block;
 	position: relative;
+	border: 3px solid #606060;
+	border-radius: 5px;
 	opacity: 0.2;
+	/*opacity: 0.3;*/
 	transition: all .2s ease-in-out;
 }
 .pageMain .menuTiles .tiles:first-child {
@@ -118,17 +120,13 @@ body {
 	margin-right: 0;
 }
 .pageMain .menuTiles .tiles:hover {
+	border: 3px solid #95191B;
 	opacity: 1;
 	transform: scale(1.1);
 }
 .pageMain .menuTiles .tiles img {
-	width: 297px;
-	height: 150px;
-	border: 3px solid #606060;
-	border-radius: 5px;
-}
-.pageMain .menuTiles .tiles img:hover {
-	border: 3px solid #95191B;
+	width: 100%;
+	height: 100%;
 }
 .pageMain .menuTiles .tiles .tileCaption {
 	color: #95191B;
@@ -145,10 +143,9 @@ body {
     background: -moz-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.4));
 	position: absolute;
 	padding-left: 3px;
-    bottom: -3px;
-	left: 3px;
+    bottom: 0;
     height: 30px;
-    width: 294px;
+    width: 297px;
 }
 .pageFooter {
 	min-height: 60px;
